// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetailModal should not render if not open 1`] = `<DocumentFragment />`;

exports[`TransactionDetailModal should render a ipfs modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxiKw ha-DbdM"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transaction IPFS Hash
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  ARK Wallet 1
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxjAm bLfakz -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ dCVESD"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  IPFS Hash
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    QmPRqPTEEwx95WNcSsk6YQk7aGW9hoZbTF9zE92dBj9H68
                  </div>
                </div>
              </div>
              <div
                class="sc-AxjAm bLfakz border-black"
              >
                <div
                  class="sc-AxirZ lfxaA-d"
                  height="24"
                  width="22"
                >
                  <svg>
                    ipfs.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxirZ hDwaov"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`TransactionDetailModal should render a multiPayment modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxiKw ha-DbdM"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  ARK Wallet 1
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxjAm bLfakz -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ dCVESD"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 last:pb-0"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Recipients
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between text-sm font-semibold text-theme-neutral"
                  >
                    <div
                      class="ml-12"
                    >
                      Address
                    </div>
                    <div
                      class="ml-12"
                    >
                      Amount
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="sc-AxgMl eXChH"
                    color="danger"
                  >
                    100.00000000 BTC
                  </div>
                </div>
              </div>
              <div
                class="sc-AxjAm bLfakz border-theme-danger-200 text-theme-danger-dark"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Smartbridge
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    Test
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxirZ hDwaov"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`TransactionDetailModal should render a multiSignature modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxiKw ha-DbdM"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Multisignature
          </h2>
          <div
            class="flex-1"
          >
            <form
              class="space-y-8"
              data-testid="Form"
            >
              <div>
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    data-testid="MultiSignatureDetail__first-step"
                  >
                    <div
                      class="flex items-center py-6 true "
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Sender
                        </div>
                        <div
                          class="font-semibold"
                        >
                          <div
                            class="mt-2 font-semibold"
                          >
                            ADDRESS
                          </div>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                            title="test"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Recipient
                        </div>
                        <div
                          class="font-semibold"
                        >
                          Bank
                          <span
                            class="ml-2 text-theme-neutral"
                          >
                            ADDR...ESSS
                          </span>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                            title="test"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Amount
                        </div>
                        <div
                          class="font-semibold"
                        >
                          <div
                            class="sc-AxgMl eXChH"
                            color="danger"
                          >
                            2,088.84557 ARK
                          </div>
                          <span
                            class="ml-2 text-theme-neutral"
                          >
                            23,000.00 USD
                          </span>
                        </div>
                      </div>
                      <div
                        class="sc-AxjAm bLfakz border-theme-danger-contrast text-theme-danger-400"
                      >
                        <div
                          class="sc-AxirZ hPsuTj"
                          height="16"
                          width="16"
                        >
                          <svg>
                            sent.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Transaction Fee
                        </div>
                        <div
                          class="font-semibold"
                        >
                          0.09812015 ARK
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Smartbridge
                        </div>
                        <div
                          class="font-semibold"
                        >
                          <div
                            class="flex justify-between"
                          >
                            Hello!
                            <div
                              class="sc-AxirZ eEbZjj"
                              height="20"
                              width="20"
                            >
                              <svg>
                                smartbridge.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Timestamp
                        </div>
                        <div
                          class="font-semibold"
                        >
                          14.04.2020 21:42:40
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pb-0"
                    >
                      <div
                        class="flex-1 space-y-2"
                      >
                        <div
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Confirmations
                        </div>
                        <div
                          class="font-semibold"
                        >
                          Waiting for Signatures
                        </div>
                      </div>
                    </div>
                    <div
                      class="px-10 pt-8 mt-8 -mx-10 text-black border-t border-gray-500"
                    >
                      <div>
                        <h3
                          class="mb-0"
                        >
                          Signatures
                        </h3>
                        <div
                          class="flex"
                        >
                          <div>
                            <div
                              class="mb-2 text-sm font-semibold text-theme-neutral"
                            >
                              You
                            </div>
                            <div
                              class="pr-4 mr-2 border-r border-theme-neutral-300"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="test"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                    title="test"
                                  />
                                </div>
                                <span
                                  class="sc-AxheI bNuJAj flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                                >
                                  <div
                                    class="sc-AxirZ hDwaov"
                                    height="12"
                                    width="12"
                                  >
                                    <svg>
                                      checkmark.svg
                                    </svg>
                                  </div>
                                  <span />
                                </span>
                              </div>
                            </div>
                          </div>
                          <div>
                            <div
                              class="mb-2 ml-2 text-sm font-semibold text-theme-neutral"
                            >
                              Other
                            </div>
                            <div
                              class="flex ml-2 space-x-4"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="test"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                    title="test"
                                  />
                                </div>
                                <span
                                  class="sc-AxheI bNuJAj flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                                >
                                  <div
                                    class="sc-AxirZ hDwaov"
                                    height="12"
                                    width="12"
                                  >
                                    <svg>
                                      status-clock.svg
                                    </svg>
                                  </div>
                                  <span />
                                </span>
                              </div>
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="test"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                    title="test"
                                  />
                                </div>
                                <span
                                  class="sc-AxheI bNuJAj flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                                >
                                  <div
                                    class="sc-AxirZ hDwaov"
                                    height="12"
                                    width="12"
                                  >
                                    <svg>
                                      status-clock.svg
                                    </svg>
                                  </div>
                                  <span />
                                </span>
                              </div>
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="test"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                    title="test"
                                  />
                                </div>
                                <span
                                  class="sc-AxheI bNuJAj flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-200 text-theme-success-500"
                                >
                                  <div
                                    class="sc-AxirZ hDwaov"
                                    height="12"
                                    width="12"
                                  >
                                    <svg>
                                      checkmark.svg
                                    </svg>
                                  </div>
                                  <span />
                                </span>
                              </div>
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="test"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                    title="test"
                                  />
                                </div>
                                <span
                                  class="sc-AxheI bNuJAj flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-danger-contrast text-theme-danger-400"
                                >
                                  <div
                                    class="sc-AxirZ hDwaov"
                                    height="12"
                                    width="12"
                                  >
                                    <svg>
                                      status-clock.svg
                                    </svg>
                                  </div>
                                  <span />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-8"
                >
                  <div
                    class="flex-1"
                  >
                    <button
                      class="sc-AxiKw gFzSt mr-2"
                      color="primary"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                  <div
                    class="space-x-3"
                  >
                    <button
                      class="sc-AxiKw gFzSt"
                      color="primary"
                      data-testid="MultiSignatureDetail__back-button"
                      disabled=""
                      type="button"
                    >
                      Back
                    </button>
                    <button
                      class="sc-AxiKw wFYj inline-block"
                      color="primary"
                      data-testid="MultiSignatureDetail__sign-button"
                      type="button"
                    >
                      Sign
                    </button>
                    <button
                      class="sc-AxiKw wFYj hidden"
                      color="primary"
                      data-testid="MultiSignatureDetail__submit-button"
                      type="submit"
                    >
                      Continue
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`TransactionDetailModal should render a transfer modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxiKw ha-DbdM"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 true "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="mt-2 font-semibold"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </div>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Recipient
                </div>
                <div
                  class="font-semibold"
                >
                  ARK Wallet 1
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxjAm bLfakz -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ dCVESD"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="sc-AxgMl eXChH"
                    color="danger"
                  >
                    100.00000000 BTC
                  </div>
                </div>
              </div>
              <div
                class="sc-AxjAm bLfakz border-theme-danger-200 text-theme-danger-dark"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Smartbridge
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    Test
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxirZ hDwaov"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`TransactionDetailModal should render a unvote modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxiKw ha-DbdM"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Delegate Vote
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Account
                </div>
                <div
                  class="font-semibold"
                >
                  ARK Wallet 1
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxjAm bLfakz -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ dCVESD"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Voter
                </div>
                <div
                  class="font-semibold"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                      style="width: 90%; height: 6px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </div>
              <span>
                <span
                  class="react-loading-skeleton mt-3 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40px; height: 40px; border-radius: 50%;"
                >
                  ‌
                </span>
              </span>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxirZ hDwaov"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`TransactionDetailModal should render a vote modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxiKw ha-DbdM"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Delegate Vote
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Account
                </div>
                <div
                  class="font-semibold"
                >
                  ARK Wallet 1
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    D8rr7B…s6YUYD
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxjAm bLfakz -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ dCVESD"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Voter
                </div>
                <div
                  class="font-semibold"
                >
                  <span>
                    <span
                      class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                      style="width: 90%; height: 6px;"
                    >
                      ‌
                    </span>
                  </span>
                </div>
              </div>
              <span>
                <span
                  class="react-loading-skeleton mt-3 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 40px; height: 40px; border-radius: 50%;"
                >
                  ‌
                </span>
              </span>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxirZ hDwaov"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxhUy kMyssT text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;
